Fix sidemenuHeader span padding and text alignment

--- a/src/style/style.less
+++ b/src/style/style.less
@@ -1278,13 +1278,14 @@ input {
 
 /*left slideout menu*/
 
-.toolsButton {
-    margin: 0 0 2em 1.5em;
-}
-
-#backMenu{
-  margin: 0 4.5em 0 0.5em;
-}
+// .toolsButton {
+//     // margin: 0 0 2em 1.5em;
+//     margin: 0 0 2em 1em;
+// }
+//
+// #backMenu{
+//   margin: 0 4.5em 0 0.5em;
+// }
 
 .mesaTools{
   position: absolute;
@@ -1292,7 +1293,10 @@ input {
   left: 0;
   background: white;
   border-right:1px solid lightgray;
-  min-width: 320px;
+  // min-width: 320px;
+  width:20%;
+  min-width:200px;
+  // max-width:25%;
   height: 100%;
   padding: 1em 0 0 0;
   z-index: 50;
@@ -1300,7 +1304,6 @@ input {
       margin: 0 auto .5em auto;
       // background-color: #ffe284;
       background-color: #efddb9;
-
       padding: .2em;
       width: 10em;
       border-radius: 3px;
@@ -1351,6 +1354,8 @@ input {
 }
 
 #sideMenuHeader span{
+  text-align:center;
+  padding-left: 2em;
   cursor:pointer;
 }
 
